# yardsviewer

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
Garmin/: README.md  frontyard_organizer.fit  frontyard_runner.fit  frontyard_test.fit  generate_frontyard_workout.py  rotvoll_organizer.fit  rotvoll_runner.fit
GarminSDK/: .gitignore  README.md  manifest.xml
GarminSDK/my-garmin-app/: README.md  manifest.xml
GarminSDK/my-garmin-app/resources/drawables/: drawables.xml
GarminSDK/my-garmin-app/resources/layouts/: layout.xml
GarminSDK/my-garmin-app/source/: MyGarminApp.mc
GarminSDK/resources/settings/: properties.xml  settings.xml
GarminSDK/resources/strings/: strings.xml
GarminSDK/source/: FrontyardLoopTimerApp.mc  FrontyardLoopTimerView.mc  TageYardTimerView.mc
UltraLoopTimer/: README.md  manifest-support.xml  manifest.xml  monkey-support.jungle  monkey.jungle
UltraLoopTimer/resources-runner-default/settings/: properties.xml
UltraLoopTimer/resources-support-default/settings/: properties.xml
UltraLoopTimer/resources/drawables/: drawables.xml
UltraLoopTimer/resources/settings/: properties.xml  settings.xml
UltraLoopTimer/resources/strings/: strings.xml
UltraLoopTimer/source/: UltraLoopTimerApp.mc  UltraLoopTimerView.mc
backend/: .env.example
backend/app/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/scripts/: simulateJerseys.ts
frontend/src/: App.tsx
frontend/src/dashboards/: Dashboard.tsx  Jerseys.tsx  JerseysDashboard.tsx  Leaderboard.tsx  LeaderboardDashboard.tsx  Overview.tsx  ParticipantsDashboard.tsx  Settings.tsx  TimerDashboard.tsx  TimerSetupDashboard.tsx  index.ts  jerseyRanking.ts  simulateRace.ts  timerCore.tsx
frontend/src/utils/: fetchError.ts
(+3 files in other folders)
