[project]
name = "rotvollfjaerafrontyardultra"
version = "0.1.0"
description = "RaceResult participant count app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "truststore>=0.9.2",
    "fit-tool>=0.9.15",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.mypy]
python_version = "3.11"
files = ["backend"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true
