[project]
name = "yardsviewer"
version = "0.1.0"
description = "Race dashboards for backyard/frontyard ultra events"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "truststore>=0.9.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.mypy]
python_version = "3.12"
files = ["backend"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true
